<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="button_cancel_header">Cancel</string>

    <string name="app_name">Finance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_add_product">Add new product</string>
    <string name="start_show_all_products">Show all products</string>

    <string name="product_add_description_header">Enter description of product</string>
    <string name="product_add_name_header">Enter Name product</string>
    <string name="product_add_button_add_header">Add new product</string>
    <string name="product_choose_image_button_add_header">Choose image for product</string>


    <string name="operation_add_button_add_header">Add new operation</string>

    <string name="start_add_shop">Add new shop</string>
    <string name="start_show_all_shops">Show all shops</string>

    <string name="shop_add_description_header">Enter description of shop</string>
    <string name="shop_add_name_header">Enter Name of shop</string>
    <string name="shop_add_button_add_header">Add new shop</string>

    <string name="purchase_show_all_purchases">Show all purchases</string>
    <string name="purchase_add_new_purchase">Add new purchase</string>

    <string name="products_remove_product_button_header">Remove product</string>
    <string name="add_operation_button_header">Add operation</string>

</resources>
