<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.simplegames.finance.ViewModels.Products.AddProductActivity"
    android:weightSum="1">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_choose_image_button_add_header"
        android:id="@+id/chooseProductImageButton"
        android:onClick="chooseProductImage_onClick"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_add_name_header"
        android:id="@+id/productAddNameHeaderView"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_product_editProductName"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_add_description_header"
        android:id="@+id/productDescriptionHeaderView"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_product_editProductDescription"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_add_button_add_header"
        android:id="@+id/addNewProductButton"
        android:onClick="addNewProduct_onClick"/>
</LinearLayout>