<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.simplegames.finance.ViewModels.Shops.AddShopActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_add_name_header"
        android:id="@+id/shopAddNameHeaderView"
        android:layout_alignRight="@+id/add_shop_editName"
        android:layout_alignEnd="@+id/add_shop_editName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_shop_editName"
        android:layout_below="@+id/shopAddNameHeaderView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView       android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_add_description_header"
        android:layout_below="@+id/add_shop_editName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText       android:id="@+id/add_shop_editDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_shop_button_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />

    <LinearLayout   android:id="@+id/add_shop_button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/add_shop_editDescription"
        android:layout_alignEnd="@+id/add_shop_editDescription">

        <Button     android:id="@+id/addNewProductButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_add_button_add_header"
            android:onClick="addNewShop_onClick"
            android:layout_weight="0.5"/>

        <Button     android:id="@+id/cancelProductButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_header"
            android:layout_weight="0.5"
            android:onClick="cancel_onClick"/>
    </LinearLayout>
</RelativeLayout>